syntax = "proto3";              
//Fenni

option java_package = "emu.lunarcore.proto";

message DynamicValue {
	string key = 3;
	float value = 7;
}